[package]
name = "webmerc"
version = "0.1.1"
edition = "2021"
description = "A Rust port of globalmaptiles.py"
license = "MIT"
repository = "https://github.com/tayden/webmerc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"